# denari

./: .gitignore  .vercelignore  README.md  package-lock.json  package.json  vercel.json
denari-chain/: Cargo.toml  README.md
denari-chain/node/: Cargo.toml  build.rs
denari-chain/pallets/denari-index/: Cargo.toml
denari-chain/pallets/denari-index/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
denari-chain/runtime/: Cargo.toml
denari-site/: .vercelignore  package.json  tailwind.config.js  vercel.json
denari-site/app/: globals.css  layout.tsx  page.tsx
denari-site/app/docs/: layout.tsx  page.tsx
denari-site/app/docs/cryptocurrency-comparison/: page.mdx  page.tsx
denari-site/app/docs/faq/: page.mdx  page.tsx
denari-site/app/docs/glossary/: page.mdx
denari-site/app/docs/governance/: page.mdx  page.tsx
denari-site/app/docs/inflation-indexing/: page.mdx  page.tsx
denari-site/app/docs/key-concepts/: page.mdx  page.tsx
denari-site/app/docs/quick-start/: page.mdx  page.tsx
denari-site/app/docs/technical/: page.mdx  page.tsx
denari-site/components/docs/: DocFooter.tsx  DocSidebar.tsx
denari-site/components/layout/: Footer.tsx  Header.tsx
denari-site/components/sections/: CPICharts.tsx  FAQ.tsx  Governance.tsx  Hero.tsx  HowItWorks.tsx
denari-site/components/three/: SolarSystem.tsx
denari-site/data/: cpi-data.ts
